--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -37,6 +37,7 @@
 		<param-value>
 			classpath:spring/applicationContext-core.xml
 			classpath:spring/applicationContext-dao.xml
+			classpath:spring/applicationContext-aop.xml
 		</param-value>
 	</context-param>
 
